Simple APIs for university model implemented
university scheme and model is defined.
Simple APIs for university model are implemented. Now you can use Swagger UI to add a university; get a list of all universities; get a single university by id, delete a single university by id.
